login page created

--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -72,7 +72,11 @@ main {
                 background: transparent;
                 padding: 12px 24px;
                 cursor: pointer;
-    
+                
+                &.disabled{
+                    opacity: 0.8;
+                }
+
                 &.btn-primary{
                     background-color: vars.$primary-color;
                     color: white;
