--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -5,7 +5,8 @@ main {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 
     section{
         height: 100%;
@@ -18,12 +19,12 @@ main {
     .main-section{
         gap: 8px;
 
-        flex-grow: 1;
+        flex-basis: 70%;
         background-color: vars.$gray-bg ;
     }
 
     .form-section{
-        flex-grow: 0.3;
+        flex-basis: 30%;
         padding: 0 35px;
         
         img{
