--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,5 +9,9 @@
 }
 
 html, body{
+    width: 100%;
     height: 100%;
+    min-height: 100vh;  
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
